# LobCorp_GRUB_Windows

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  checker.ps1  grub.cfg
cmake/: AssertEmbedLen.cmake  AssertFileNonZero.cmake  EmbedFile.cmake
docs/: Boot - In detail.md  Setup GRUB & HackBGRT.md  Trumpet - In detail.md  Trumpet Info.md
grub/: README.md  grub.cfg  grubenv
scripts/: checker.ps1  installer.ps1  trumpetReleaser.ps1
trumpet/: README.md  installer.cpp  main.cpp  resources.rc  uninstaller.cpp
trumpet/TrumpetUninstaller/: Form1.Designer.cs  Form1.cs  Program.cs  UninstallTrumpet.cs
trumpet/resources/: installer_assets.rc.in  resource_ids.h  resources.rc
